<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tun.app.holidays.fragment.SettingsFragment"
    android:animateLayoutChanges="true">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/scrollView"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/HoliLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/settings_label_nbr_payed_holiday" />

                <Button
                    android:id="@+id/settings_butt_holi_payed_less"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_butt_less" />
                <TextView
                    android:id="@+id/settings_txt_nbr_cp"
                    style="@style/HoliLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/settings_label_nbr_ex_25" />
                <Button
                    android:id="@+id/settings_butt_holi_payed_more"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_butt_more"/>

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/holi_blue"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/HoliLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/settings_label_nbr_rtt_holiday" />

                <Button
                    android:id="@+id/settings_butt_holi_rtt_less"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_butt_less" />
                <TextView
                    android:id="@+id/settings_txt_nbr_rtt"
                    style="@style/HoliLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/settings_label_nbr_ex_10" />
                <Button
                    android:id="@+id/settings_butt_holi_rtt_more"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_butt_more"/>

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/holi_blue"/>



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/settings_layout_butt_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/settings_butt_confirm"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_butt_confirm"/>
    </LinearLayout>

</LinearLayout>
